--- a/mini-portainer/.env
+++ b/mini-portainer/.env
@@ -1,7 +1,7 @@
-DB_USER=seu_usuario
-DB_HOST=localhost
-DB_NAME=mini_portainer
-DB_PASSWORD=abras
-DB_PORT=5432
+DB_USER=postgres         # ou o usuário real do seu banco
+DB_HOST=localhost        # ou o host do seu banco (pode ser 127.0.0.1 ou o nome do serviço docker)
+DB_NAME=mini_portainer   # nome do banco criado
+DB_PASSWORD=abras    # senha real do usuário do banco
+DB_PORT=5432             # porta do PostgreSQL
 JWT_SECRET=umasecretfortejwt
 PORT=3000
